Primera version 1.1 Encriptar

--- a/index.html
+++ b/index.html
@@ -6,34 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 
 <body>
-    <header>
+    <header class="topheader">
         <nav class="topnav">
-            <a href="#" class="logo">
-                <img height="50" width="50" src="img/marco2.jpg" alt="programador" />
+            <a href="index.html" class="logo">
+                <img height="70" width="180" src="images/logo.png" alt="Logo de Alura" />
                 <div class="logotype">
                     Marco Antonio<br />
                     { code }
                 </div>
             </a>
             <button class="open-menu" aria-label="Abrir menú">
-                <img src="img/hamburger-icon.svg" alt="abrir menú" />
+                <img src="images/hamburger-icon.svg" alt="abrir menú" />
             </button>
-            <ul class="menu">
+            <ul class="titulo">
                 <button class="close-menu" aria-label="Cerrar menú">
-                    <img src="img/close-icon.svg" alt="cerrar menú" />
+                    <img src="images/close-icon.svg" alt="cerrar menú" />
                 </button>
-                <li><a href="#profile" class="selected">Perfil</a></li>
-                <li><a href="#experience">Experiencia</a></li>
-                <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="index.html" class="selected">Encriptador</a></li>
+                <li><a href="index.html" class="selected"> Desencriptador</a></li>
+
             </ul>
         </nav>
     </header>
     <main class="main">
-        <img src="images/logo.png" class="logo" onclick="home()">
         <section class="div-principal">
             <form action="">
                 <textarea class="text-input" type="text" name="input-texto" maxlength="120" id="input-texto"
@@ -61,6 +65,8 @@
             </div>
         </section>
     </main>
+    <script defer src="script.js"></script>
+    
 </body>
 
-</html>l
+</html>
