--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" />
-  <!--link rel="stylesheet" href="reset.css"-->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="navbar.css" />
   <link rel="stylesheet" href="principal.css" />
@@ -42,8 +41,8 @@
     <div class="horizontal-padding vertical-padding">
       <section class="profile">
         <div class="profile-info">
-          <!-- <h1 class="profile-title">Hola soy, <br>Marco antonio</h1>-->
-          <input type="text" class="textoEntrada">
+          <input type="text" class="textoEntrada" id="textoEntrada"
+            placeholder="Ingresa el texto encriptar o desencriptar.">
           <div class="botones">
             <img src="images/!.png" alt="">
             <p class="profile-details">
@@ -51,57 +50,23 @@
             </p>
           </div>
           <div>
-            <button class="encriptar-btn">Encriptar</button>
-            <button class="desencriptar-btn">Desencriptar</button>
-            <!--<button class="profile-btn">Descargar cv</button>-->
+            <button class="encriptar-btn" onclick="botonEncriptar()">Encriptar</button>
+            <button class="desencriptar-btn" onclick="botonDesencriptar()">Desencriptar</button>
           </div>
 
         </div>
         <div class="profile-img-section">
-          <!-- <img class="profile-img" src="images/mensaje.svg" alt="">-->
-          <input type="text" class="textoSalida">
+          <input type="text" class="textoSalida" id="textoSalida" placeholder="">
           <div class="">
-            <button class="copiar-btn">Copiar</button>
+            <button class="copiar-btn" id="copiar-btn" onclick="botonCopiar()">Copiar</button>
             <p class=""> </p>
           </div>
 
       </section>
     </div>
   </main>
-
-
+  <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script defer src="script.js"></script>
 </body>
 
 </html>
-
-<!-- 
-    <main class="main">
-        <section class="div-principal">
-            <form action="">
-                <textarea class="text-input" type="text" name="input-texto" maxlength="120" id="input-texto"
-                    placeholder="Digite seu texto"></textarea>
-                <div class="form-group">
-                    <img src="images/!.png" class="img-alerta">
-                    <label for="input-texto">Solo letras minúsculas y sin acentos.</label>
-                </div>
-                <div class="botones-div">
-                    <input class="btn-encriptar" type="submit" value="Criptografar" id="btn-encriptar">
-                    <input class="btn-desencriptar" type="submit" value="Descriptografar" id="btn-desencriptar">
-                </div>
-            </form>
-        </section>
-
-        <section class="message-box">
-            <div id="div-desaparece" class="message-box-div">
-                <img src="images/mensaje.svg">
-                <h2>Ningún mensaje fue encontrado</h2>
-                <h3>Ingresa el texto que desees encriptar o desencriptar.</h3>
-            </div>
-            <div id="div-aparece">
-                <textarea class="div-mensaje" type="text" id="mensaje" placeholder="Ningún mensaje"></textarea>
-                <input class="btn-copiar" type="submit" value="Copiar" id="btn-copiar">
-            </div>
-        </section>
-    </main>
--->
